Add ggplot2 to imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(download_model)
 export(extract_landsat)
 export(search_image_df)
 import(dplyr)
+import(ggplot2)
 import(lubridate)
 import(mgcv)
 import(parallel)
