Parallel backened changed to future for stability

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,11 @@ export(download_model)
 export(extract_landsat)
 export(search_image_df)
 import(dplyr)
+import(future)
+import(future.apply)
 import(ggplot2)
 import(lubridate)
+import(lwgeom)
 import(mgcv)
 import(parallel)
 import(purrr)
