Future paral related changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(classify_landsat)
 export(download_model)
 export(extract_landsat)
 export(search_image_df)
+export(snowman_cleanup)
 import(dplyr)
 import(future)
 import(future.apply)
